 + Render graves behind everything else, so that they can't hide mines etc.
 + Show indicator symbols at bottom right while extra damage or low gravity are active
 + Color coding for the turn timer: green = ready timer, yellow = turn in progress, red = retreat timer, gray = timer paused
 + Play countdown sounds at 1-4 seconds turn time
 + Several new sound effects for weapons and utilities
 + Small visual effects enhancements
 + Briefly show theme and music authors in chat at start of game
 + A few new funny ticker messages (English)
 * Fixed air-strikes drops being off-center
 * Gameplay fix: Hammer damage is now rounded down. This means it will cause NO DAMAGE to a hedgehog with less than 3 hp.
 * Fixed screenshots being too bright if taken in quick succession
 * Video recording functionality is restored
 * Fixed bee not being affected by wrap world edge while still being thrown
 * Fixed turn not ending when sticky mine was trapped on rubberband
 * Fixed hedgehog-voices missing a response type (Justyouwait/"You're gonna pay for that") on some platforms (e.g. Linux)
 * Fixed SD-flakes of themes not working if regular flakes were disabled
 * Fixed RC planes being able to collect frozen crates
 * Fixed Seduction's "Yoohoo!" sound not playing
 * Fixed Hedgehogs getting hurt while firing deagle / sniper rifle bullet in certains situations
 * Fixed hedgehogs saying “Missed” when drowning enemy without dealing damage
 * Various other fixes

Highlander:
 + Show collected weapons after kill and play sound
 + Mission panel now shows all game modifiers (e.g. mines time, vampirism, etc.)

Construction Mode:
 + Added script parameter support:
  + initialenergy: Amount of energy at start
  + energyperround: New energy per round
  + maxenergy: Maximum allowed energy
  + cratesperround: Maximum placable crates per round
 + Completely reworked all in-game texts and descriptions
 * Fix rubber being placable inside land
 * Fix invalid girder placement costing energy