@@ -465,7 +465,8 @@ type
     // Events that are important for the course of the game or at least interesting for other reasons
     TEventId = (eidDied, eidDrowned, eidRoundStart, eidRoundWin, eidRoundDraw,
             eidNewHealthPack, eidNewAmmoPack, eidNewUtilityPack, eidTurnSkipped,
-            eidHurtSelf, eidHomerun, eidGone);
+            eidHurtSelf, eidHomerun, eidGone, eidPoisoned, eidResurrected,
+            eidKamikaze, eidTimeTravelEnd, eidTimeout, eidKingDied);
 
     TGoalStrId = (gidCaption, gidSubCaption, gidPlaceKing, gidLowGravity, gidInvulnerable,
             gidVampiric, gidKarma, gidKing, gidPlaceHog, gidArtillery,
